--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "laravel/wayfinder": "^0.1.9",
+        "openfoodfacts/openfoodfacts-laravel": "^0.7.0",
         "spatie/laravel-data": "^4.19",
         "spatie/laravel-permission": "^7.2",
         "spatie/laravel-typescript-transformer": "^2.5"
