--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 /bootstrap/ssr
 /node_modules
 /public/build
-/public/build/*
+/public/build/manifest.json
 /public/hot
 /public/storage
 /storage/*.key
