--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/tinker": "^2.10.1",
         "laravel/wayfinder": "^0.1.9",
         "openfoodfacts/openfoodfacts-laravel": "^0.7.0",
+        "predis/predis": "^3.4",
         "spatie/laravel-data": "^4.19",
         "spatie/laravel-permission": "^7.2",
         "spatie/laravel-typescript-transformer": "^2.5"
